asteria/core/tests/errors/elaboration_errors/term_constructor_not_in_scope_hint_no_term_constructors_in_scope.asteriacode
data Foo;;

x : Test$Foo()
  = Bar(;)
  ;;
